--- a/style/style.css
+++ b/style/style.css
@@ -544,6 +544,40 @@ a.button_red_full:visited{
     cursor:pointer;
 }
 
+/* max width */
+.head_wrap,
+nav ul,
+.course-name_wrap,
+.course-learn_wrap,
+.course-programm_wrap,
+.course-skills_wrap,
+.course-group-desc_wrap,
+.course-build,
+.course-work_wrap,
+.course-about_school_wrap,
+.course-sign_wrap,
+.course-reviews_wrap,
+.feedback_wrap,
+.footer_wrap,
+.bottom_wrap,
+.course-advant_wrap,
+.course-features_wrap,
+.course-video_wrap,
+.course-feedback_wrap,
+.course-age_wrap,
+.course-advantages_wrap,
+.gallery_wrap,
+.error-content,
+.policy_wrap,
+.course-name-list_wrap,
+.course-suit_all-wrap,
+.course-test_wrap,
+.course-rates_wrap{
+    width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+}
+
 
 
 /* Header */
@@ -766,8 +800,9 @@ nav ul>li .menu-children li a.active:visited{
 }
 
 /* Course name */
+.course-name{
+    padding: 80px 5%;}
 .course-name_wrap{
-    padding: 80px 5%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -819,10 +854,13 @@ nav ul>li .menu-children li a.active:visited{
     left: 0;
 }
 .course-name-list{
+    padding: 0 5% 130px;
+}
+.course-name-list_wrap{
     display: grid;
     grid-template-columns: 23% 23% 23% 23%;
     grid-column-gap: 2%;
-    padding: 0 5% 130px;
+
 }
 .course-name-list_item{
     border-radius: 20px;
@@ -837,6 +875,9 @@ nav ul>li .menu-children li a.active:visited{
 /* Course learn */
 .course-learn{
     padding: 0px 5% 100px;
+    
+}
+.course-learn_wrap{
     display: grid;
     grid-template-columns: 40% 50%;
     grid-column-gap: 10%;
@@ -855,10 +896,12 @@ nav ul>li .menu-children li a.active:visited{
 
 /* Course programm */
 .course-programm{
+    padding: 0 5% 50px;
+}
+.course-programm_wrap{
     display: grid;
     grid-template-columns: 48% 48%;
     grid-column-gap: 4%;
-    padding: 0 5% 50px;
 }
 .course-programm h2{
     margin-bottom: 60px;
@@ -887,6 +930,9 @@ nav ul>li .menu-children li a.active:visited{
     padding: 100px 5%;
     background: #8EB400;
     color: #fff;
+    
+}
+.course-group-desc_wrap{
     display: grid;
     grid-template-columns: 21% 21% 21% 24%;
     grid-column-gap: 4%;
@@ -988,14 +1034,17 @@ nav ul>li .menu-children li a.active:visited{
     position: relative;
     color: #fff;
 }
-.course-test::after{
+.course-test_wrap{
+    position: relative;
+}
+.course-test_wrap::after{
     position: absolute;
     content: '';
     width: 505.21px;
     height: 336.18px;
     background: url(./../img/test-illust.svg) no-repeat center;
     top: 50%;
-    right: 5%;
+    right: 0%;
     transform: translateY(-50%);
 }
 .course-test h2{
@@ -1034,8 +1083,11 @@ nav ul>li .menu-children li a.active:visited{
 }
 
 /* Course Advantages */
-.course-advant_wrap{
+.course-advant{
     padding: 0 5% 100px;
+}
+.course-advant_wrap{
+    
 }
 .course-advant h2{
     width: 60%;
@@ -1058,9 +1110,11 @@ nav ul>li .menu-children li a.active:visited{
 }
 
 /* Course feature */
-.course-features_wrap{
+.course-features{
     padding: 100px 5%;
     background: #F5F5F5;
+}
+.course-features_wrap{
     display: grid;
     grid-template-columns: auto auto;
     position: relative;
@@ -1068,7 +1122,7 @@ nav ul>li .menu-children li a.active:visited{
 .course-features_wrap:after{
     position: absolute;
     content: '';
-    bottom: 5%;
+    bottom: -22%;
     left: 1.5%;
     width: 540px;
     height: 275px;
@@ -1120,8 +1174,11 @@ nav ul>li .menu-children li a.active:visited{
 }
 
 /* Course feedback */
-.course-feedback_wrap{
+.course-feedback{
     padding: 90px 5%;
+}
+.course-feedback_wrap{
+    
     display: grid;
     grid-template-columns: 49% 49%;
     grid-column-gap: 2%;
@@ -1193,7 +1250,7 @@ nav ul>li .menu-children li a.active:visited{
     height: 71px;
     background-image: url(./../img/feed_rain.svg);
     top: 0;
-    right: 60px;
+    right: -65px;
 
 }
 .course-feedback-item:nth-child(2) .course-feedback-item_text::after{
@@ -1215,9 +1272,13 @@ nav ul>li .menu-children li a.active:visited{
 .course-feedback-item_text p:first-child{font-weight: bold;}
 
 /* Course Skills */
-.course-skills_wrap{
-    padding: 95px 5% 35px;
+.course-skills{
     background: #F5F5F5;
+    padding: 95px 5% 35px;
+}
+.course-skills_wrap{
+    
+    
     position: relative;
 }
 .course-skills_wrap:after{
@@ -1225,7 +1286,7 @@ nav ul>li .menu-children li a.active:visited{
     position: absolute;
     width: 437px;
     height: 319px;
-    top: -80px;
+    top: -180px;
     right: 4%;
     background: url(./../img/skills-illustr.svg) no-repeat center;
 }
@@ -1253,11 +1314,15 @@ nav ul>li .menu-children li a.active:visited{
 }
 
 /* Course age child */
-.course-age_wrap{
+.course-age{
     padding: 100px 5%;
     position: relative;
 }
-.course-age_wrap:after{
+.course-age_wrap{
+    
+    
+}
+.course-age:after{
     content: '';
     position: absolute;
     right: 4%;
@@ -1427,7 +1492,7 @@ nav ul>li .menu-children li a.active:visited{
 
 
 /* Gallery */
-.gallery_wrap{
+.gallery{
     padding: 100px 5%;
 }
 .gallery h2{
@@ -1460,15 +1525,18 @@ nav ul>li .menu-children li a.active:visited{
 
 
 /* How work */
-.course-work_wrap{
+.course-work{
     position: relative;
     padding: 100px 5% 230px;
+}
+.course-work_wrap{
+    position: relative;
 }
 .course-work_wrap::before{
     position: absolute;
     content: '';
     top: 100px;
-    right: -15px;
+    right: -80px;
     width: 71px;
     height: 100px;
     background: url(./../img/work-illustr2.svg) no-repeat center;
@@ -1476,7 +1544,7 @@ nav ul>li .menu-children li a.active:visited{
 .course-work_wrap:after{
     position: absolute;
     content: '';
-    bottom: -10px;
+    top: 80%;
     left: 4%;
     width: 531px;
     height: 380px;
@@ -1596,19 +1664,24 @@ nav ul>li .menu-children li a.active:visited{
 
 /* Feedback form */
 .feedback,
+.course-sign{
+    padding: 105px 5%;
+    background: #8EB400;
+}
+.feedback_wrap,
 .course-sign_wrap{
     position: relative;
     display: grid;
     grid-template-columns: 54% 44%;
     grid-column-gap: 2%;
-    padding: 105px 5%;
-    background: #8EB400;
+    
+    
 }
-.feedback::after,
+.feedback_wrap::after,
 .course-sign_wrap:after{
     position: absolute;
     content: '';
-    bottom: 5%;
+    bottom: -10%;
     left:1.5%;
     width: 566px;
     height: 348px;
@@ -1657,11 +1730,14 @@ nav ul>li .menu-children li a.active:visited{
     padding: 100px 5% 0;
     position: relative;
 }
-.course-advantages:after {
+.course-advantages_wrap{
+    position: relative;
+}
+.course-advantages_wrap:after {
     content: '';
     position: absolute;
-    right: 4%;
-    top: -96px;
+    right: -10%;
+    top: -192px;
     width: 373px;
     height: 353px;
     background: url(./../img/advant_bird-illustr.svg) no-repeat center;
@@ -1738,6 +1814,7 @@ nav ul>li .menu-children li a.active:visited{
     padding: 100px 5%;
     position: relative;
 }
+
 .course-rates h2{
     margin-bottom: 70px;
 }
@@ -2004,7 +2081,7 @@ nav ul>li .menu-children li a.active:visited{
 }
 
 /* policy */
-.policy_wrap{
+.policy{
     padding: 60px 5%;
 }
 .policy_wrap h1{
@@ -2047,11 +2124,14 @@ nav ul>li .menu-children li a.active:visited{
 /* Footer */
 footer{
     padding: 31px 5% 48px;
-    background: #F5F5F5;
-    display: flex;
-    justify-content: space-between;
+    background: #F5F5F5;  
     z-index: 2223;
     position: relative;
+}
+.footer_wrap{
+    display: flex;
+    justify-content: space-between;
+    
 }
 .footer-copy{
     font-size: 14px;
@@ -2078,12 +2158,7 @@ footer{
 .footer-social a{
     margin-left: 5px;
 }
-
 .bottom{
-    display: grid;
-    grid-template-columns: 160px auto 190px;
-    grid-column-gap: 2%;
-    align-items: center;
     position: fixed;
     width: 100%;
     left: 0;
@@ -2092,4 +2167,11 @@ footer{
     background: #fff;
     z-index: 2222;
     box-shadow: 0px 3px 15px rgba(46, 46, 46, 0.3)
+}
+.bottom_wrap{
+    display: grid;
+    grid-template-columns: 160px auto 190px;
+    grid-column-gap: 2%;
+    align-items: center;
+    
 }
