--- a/style/style.css
+++ b/style/style.css
@@ -1343,10 +1343,13 @@ nav ul>li .menu-children li a.active:visited{
 .course-age-tabs{
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
+    position: relative;
 }
 .course-age-tabs a,
 .course-age-tabs a:visited{
     display: block;
+    position: relative;
+    z-index: 1;
     text-align: center;
     font-weight: 500;
     font-size: 20px;
