--- a/style/mobile.css
+++ b/style/mobile.css
@@ -968,10 +968,14 @@ footer .footer_wrap>div{
     text-align: center;
 }
 
-.course-rewviews-slider{
+.course-rewviews-slider,
+.home-teacher-slider,
+.home-feedback-items{
     position: relative;
 }
-.course-rewviews-slider::before{
+.course-rewviews-slider::before,
+.home-teacher-slider::before,
+.home-feedback-items::before{
     position: absolute;
     content: '';
     width: 20px;
@@ -992,4 +996,137 @@ footer .footer_wrap>div{
     from {right: 15%;}
     to {right: 5%;}
     }
+
+
+
+
+    .slick-dotted.slick-slider .slick-list{
+        overflow: hidden !important;
+        padding-top: 15px;
+    }
+    
+    .fast-menu_wrap{
+        display: block;
+    }
+    .fast-menu_wrap>div a, .fast-menu_wrap>div a:visited {
+        padding: 25px 45px 25px 40%;
+        font-size: 18px;
+    }
+    .fast-menu {
+        padding: 0px 5% 50px;
+    }
+    
+    .home-sign {
+        padding: 45px 5%;
+    }
+    .home-sign h2,
+    .home-stocks h2,
+    .home-feedback h2 {
+        margin-bottom: 40px;
+        width: 100%;
+    }
+    .home-sign ul,
+    .home-news-items,
+    .subscribe-vk_wrap {
+        display: block;}
+    .home-sign ul li,
+    .home-news-item{
+        width: 100%;
+        margin-bottom: 35px;
+    }
+    .home-sign ul li span{top: 0;}
+    .home-sign-filial,
+    .home-stocks-items,
+    .home-feedback-items,
+    .home-feedback-item{
+        display: block;
+    }
+    .home-sign-item,
+    .home-stocks-item{margin-bottom: 20px;width: 100%;}
+    .in-section{
+        padding-top: 15px;
+    }
+    .home-news,
+    .home-stocks,
+    .home-feedback,
+    .teachers-page,
+    .feedback-page,
+    .news-page,
+    .stocks-page{
+        padding: 45px 5%;
+    }
+
+    .subscribe-vk_wrap>div:first-child{
+        max-width: 100%;
+        margin-bottom: 25px;
+    }
+    .subscribe-vk_wrap>div a,
+    .subscribe-vk_wrap>div a:visited{
+        margin: 0 auto;
+    }
+    .home-stocks-item{
+        width: 100% !important;
+    }
+    .home-stock-img{
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+    }
+    .home-stock-img img {
+        width: auto;
+        height: 100%;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+    }
+    .home-feedback-ava{margin-bottom: 15px;float: left;}
+    .home-feedback-text p{
+        max-height: 10000px;
+        float: none;
+        width: 100%;
+    }
+    .home-feedback-items{overflow: hidden;}
+    .home-feedback-text a{
+        display: none;
+    }
+    .mob_name{
+        padding: 30px 0 0 125px ;
+    }
+
+    .teachers-menu a,
+.teachers-menu a:visited{
+    font-size: 14px;
 }
+.teachers-page h2{
+    text-align: left;
+    margin-bottom: 35px;
+}
+.teachers-items>div>div{
+    display: block;
+}
+.teacher-item{
+    margin-bottom: 20px;
+}
+
+
+.feedback-page h2,
+.news-page h2,
+.stocks-page h2{
+    width: 100%;
+    margin-bottom: 25px;
+}
+.feedback-page-item{
+    grid-template-areas: 'image name'
+    'text text';
+    grid-template-columns: 105px auto;
+    grid-column-gap: 5%;
+    align-items: center;
+    margin-bottom: 10px;
+    grid-row-gap: 20px;
+}
+
+}
+
+
