--- a/style/style.css
+++ b/style/style.css
@@ -586,7 +586,10 @@ nav ul,
 .teachers-page_wrap,
 .feedback-page_wrap,
 .news-page_wrap,
-.stocks-page_wrap{
+.stocks-page_wrap,
+.filial-head_wrap,
+.teacher-about-filial_wrap,
+.teacher-head_wrap{
     width: 100%;
     max-width: 1280px;
     margin: 0 auto;
@@ -1041,7 +1044,9 @@ nav ul>li .menu-children li a.active:visited{
 .home-news-item_cont{
     padding: 30px 40px;
 }
-.home-news-item_cont span{
+.home-news-item_cont span,
+.news-date,
+.stocks-date{
     display: block;
     font-weight: 500; 
     font-size: 14px;
@@ -2795,6 +2800,56 @@ footer{
     margin-bottom: 40px;
 }
 
+.teacher-head{
+    padding: 50px 5% 70px;
+}
+.teacher-head_wrap{
+    display: grid;
+    grid-template-columns: 30% 66%;
+    grid-column-gap: 4%;
+}
+.teacher-head_wrap img{
+    width: 100%;
+    border-radius: 50%;
+}
+.teacher-head-desc h3{
+    margin-bottom: 15px;
+}
+.teacher-head-desc p{
+    margin-bottom: 25px;
+}
+.teacher-head-desc p b{
+    font-weight: 700;
+}
+.teacher-head-group{
+    background: #f5f5f5;
+    border-radius: 20px;
+    padding: 25px 30px;
+    
+}
+.teacher-head-group p{
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+.teacher-head-group ul{
+    column-count: 3;
+    column-gap: 2%;
+    column-width: 31%;
+}
+.teacher-head-group ul li{
+    padding-left: 15px;
+    position: relative;
+}
+.teacher-head-group ul li::before{
+    content: '';
+    position: absolute;
+    width: 6px;
+    height: 6px;
+    left: 0;
+    top: 5px;
+    border-radius: 50%;
+    background: #8EB400;
+}
 
 /* Feedback page */
 .feedback-page,
@@ -2829,8 +2884,149 @@ footer{
     grid-area: name;
 }
 
-/* Stocks page */
+/* Stocks and news page */
 .stocks-page .home-stocks-item{
     margin-bottom: 25px;
     width: 49%;
+}
+
+.news-page_wrap.inside,
+.stocks-page_wrap.inside{
+    display: grid;
+    grid-template-columns: 30% 68%;
+    grid-column-gap: 2%;
+}
+.news-page-image,
+.stocks-page-image{
+    margin-bottom: 25px;
+}
+.news-page-image img,
+.stocks-page-image img{
+    width: 100%;
+}
+.news-page-content h3,
+.stocks-page-content h3{
+    margin-bottom: 30px;
+}
+.news-page-content p,
+.stocks-page-content p{
+    margin-bottom: 15px;
+    font-weight: 400;
+}
+.news-page-content b,
+.stocks-page-content b{
+    font-weight: 500;
+}
+.news-page-content .in-section,
+.stocks-page-content .in-section{
+    padding-top: 15px;
+    text-align: left;
+}
+
+
+/* Filial page */
+.filial-head{
+    padding: 70px 5%;
+}
+.filial-head_wrap{
+    display: grid;
+    grid-template-areas: 'head image'
+    'desc image';
+    grid-template-columns: 43% 53%;
+    grid-column-gap: 4%;
+    grid-template-rows: auto;
+}
+.filial-head_wrap h2{
+    grid-area: head;
+    margin-bottom: 20px;
+}  
+.filial-head-image{
+    grid-area: image;
+}
+.filial-head-image img{
+    width: 100%;
+}
+.filial-head-desc{
+    grid-area: desc;
+}
+.filial-head-desc ul{
+    display: grid;
+    grid-template-columns: 49% 49%;
+    margin-bottom: 30px;
+}
+.filial-head-desc ul li{
+    position: relative;
+    padding-left: 50px;
+    font-size: 16px;
+}
+.filial-head-desc ul li::before{
+    position: absolute;
+    content: '';
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 47px;
+    height: 33px;
+}
+.filial-head-desc ul li:first-child::before{
+    background-image: url(./../img/filial_marker.svg);
+}
+.filial-head-desc ul li:last-child::before{
+    background-image: url(./../img/filial_phone.svg);
+}
+.filial-head-desc a.button_green_full,
+.filial-head-desc a.button_green_full:visited{
+    width: auto;
+    padding: 15px 40px;
+}
+.filial-head-desc ul li b{
+    font-weight: 500;
+    display: block;
+    margin-bottom: 5px;
+}
+.teacher-about-filial{
+    padding: 90px 5%;
+    background: #F5F5F5;
+}
+.teacher-about-filial_wrap{
+    display: grid;
+    grid-template-columns: 48% 48%;
+    grid-column-gap: 4%;
+}
+.teacher-about-filial-head{
+    display: grid;
+    grid-template-columns: 150px auto;
+    grid-column-gap: 5%;
+    align-items: center;
+    margin-bottom: 30px;
+}
+.teacher-about-filial-head img{width: 100%;border-radius: 50%;}
+
+.course-suit.filial h2{
+    text-align: center;
+}
+
+
+
+
+.course-test.filial{
+
+    overflow: hidden;
+}
+.filial .course-test_wrap::after{
+    background-image: url(./../img/test-illust_group2.svg);
+    width: 600px;
+    height: 700px; 
+    background-size: contain;
+    transform: translateY(-35%);
+
+}
+.course-suit.teacher p{
+    margin-bottom: 70px;
+}
+
+.home-feedback.teacher{
+    background-color: #fff;
 }
