--- a/style/mobile.css
+++ b/style/mobile.css
@@ -1,7 +1,7 @@
 @media only screen and (max-width: 600px){
 
     .all{
-        padding-top: 115px;
+        padding-top: 90px;
     }
 
 
@@ -1011,9 +1011,10 @@ footer .footer_wrap>div{
     .fast-menu_wrap>div a, .fast-menu_wrap>div a:visited {
         padding: 25px 45px 25px 40%;
         font-size: 18px;
+        line-height: 22px;
     }
     .fast-menu {
-        padding: 0px 5% 50px;
+        padding: 0px 5% 30px;
     }
     
     .home-sign {
@@ -1034,7 +1035,17 @@ footer .footer_wrap>div{
         width: 100%;
         margin-bottom: 35px;
     }
-    .home-sign ul li span{top: 0;}
+    .home-sign ul li span{
+        top: 0;
+        width: 25px;
+        height: 25px;
+        padding: 3px 0;
+        font-size: 16px;
+    }
+    .home-sign ul li{
+        padding-left: 40px;
+        margin-bottom: 20px;
+    }
     .home-sign-filial,
     .home-stocks-items,
     .home-feedback-items,
@@ -1053,9 +1064,23 @@ footer .footer_wrap>div{
     .feedback-page,
     .news-page,
     .stocks-page{
-        padding: 45px 5%;
+        padding: 20px 5%;
+    }
+    .home-teacher-item img, .teacher-item img {
+        margin: 0 auto 10px;
+    }
+    .home-teacher-item h4, .teacher-item h4 {
+        margin-bottom: 5px;
     }
 
+    .home-stocks-item a{
+        grid-template-columns: 100%;
+    }
+
+    .subscribe-vk_wrap{
+        font-size: 16px;
+        line-height: 20px;
+    }
     .subscribe-vk_wrap>div:first-child{
         max-width: 100%;
         margin-bottom: 25px;
@@ -1071,15 +1096,17 @@ footer .footer_wrap>div{
         position: relative;
         overflow: hidden;
         width: 100%;
-        height: 100%;
     }
     .home-stock-img img {
         width: auto;
         height: 100%;
-        position: absolute;
+        position: relative;
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
+        width: 100%;
+        object-fit: cover;
+        height: 150px;
     }
     .home-feedback-ava{margin-bottom: 15px;float: left;}
     .home-feedback-text p{
@@ -1107,10 +1134,10 @@ footer .footer_wrap>div{
     display: block;
 }
 .teacher-item{
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 .teacher-head{
-    padding: 35px 5% 35px;
+    padding: 20px 5% 20px;
 }
 .teacher-head_wrap{
     grid-template-columns: 100%;
@@ -1158,7 +1185,8 @@ footer .footer_wrap>div{
     grid-template-columns: 100%;
     grid-column-gap: 0%;
 }
-.filial-head_wrap h2{margin-bottom: 25px;}
+.filial-head_wrap h2,
+.filial-head-image {margin-bottom: 25px;}
 .teacher-about-filial{
     padding: 35px 5% 15px;
 }
@@ -1174,11 +1202,15 @@ footer .footer_wrap>div{
     height: 199px;
     background-size: contain;
     transform: translateY(0%);
+    margin-bottom: -5%;
 }
 .course-test.filial{
     padding: 50px 5% 0;
 }
-
+.home-feedback.teacher{
+    background-color: #fff;
+    padding: 0px 5% 20px;
+}
 
 }
 
